# rust-bpf

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
cache/socket-tracing/: README.md
cache/socket-tracing/socket-tracing/: Cargo.toml  build.rs
cache/socket-tracing/socket-tracing-common/: Cargo.toml
cache/socket-tracing/socket-tracing-ebpf/: Cargo.toml
cache/socket-tracing/socket-tracing-ebpf/src/: main.rs
cache/socket-tracing/socket-tracing/src/: main.rs
cache/traffic-tracing/: Cargo.toml  README.md
cache/traffic-tracing/traffic-tracing/: Cargo.toml  build.rs
cache/traffic-tracing/traffic-tracing-common/: Cargo.toml
cache/traffic-tracing/traffic-tracing-ebpf/: Cargo.toml
cache/traffic-tracing/traffic-tracing-ebpf/src/: main.rs
cache/traffic-tracing/traffic-tracing/src/: main.rs
ebpf/packet-tracer-ebpf/: Cargo.toml
ebpf/packet-tracer-ebpf/src/: main.rs
ebpf/packet-tracer/src/: main.rs
ebpf/scripts/: run.sh  setup.sh
ingress-tracing/define_bounds_macro/: Cargo.toml
ingress-tracing/define_bounds_macro/src/: lib.rs
ingress-tracing/egress/: Cargo.toml  README.md
ingress-tracing/egress-ebpf/: Cargo.toml
ingress-tracing/egress-ebpf/src/: entry_point.rs  lib.rs  main.rs  network_packet.rs
ingress-tracing/egress/egress/: Cargo.toml  build.rs
ingress-tracing/egress/egress-common/: Cargo.toml
ingress-tracing/egress/egress-ebpf/: Cargo.toml
ingress-tracing/egress/egress-ebpf/src/: main.rs
ingress-tracing/egress/egress/src/: main.rs
ingress-tracing/ingress/: Cargo.toml  README.md  build.rs
ingress-tracing/ingress-ebpf/: Cargo.toml
ingress-tracing/ingress-ebpf/src/: entry_point.rs  filters.rs  lib.rs  main.rs
ingress-tracing/ingress/ingress/: Cargo.toml  build.rs
ingress-tracing/ingress/ingress-common/: Cargo.toml
ingress-tracing/ingress/ingress-ebpf/: Cargo.toml
ingress-tracing/ingress/ingress-ebpf/src/: entry_point.rs  lib.rs  main.rs  network_packet.rs
ingress-tracing/ingress/src/: main.rs  mapping.rs
ingress-tracing/ingress/testing-harness/: Cargo.toml
ingress-tracing/kernel/: Cargo.toml  build.rs
ingress-tracing/kernel/src/: counters.rs  generated_ports.rs  lib.rs  network_packet.rs
ingress-tracing/scripts/: setup.sh
packet-tracer/: Cargo.toml  README.md  build.rs
packet-tracer-common/: Cargo.toml
packet-tracer-ebpf/src/: main.rs
packet-tracer/src/: main.rs
probe-tracer/: Cargo.toml  build.rs
probe-tracer-common/: Cargo.toml
probe-tracer-ebpf/: Cargo.toml
probe-tracer-ebpf/src/: main.rs
probe-tracer/src/: main.rs
scripts/: setup.sh
slim-ebpf/: Cargo.toml  build.rs
slim-ebpf/src/: main.rs  tracepoint.bpf.rs
test-tcp/: Cargo.toml  Dockerfile
test-tcp-client/: Cargo.toml
test-tcp-client/src/: main.rs
test-tcp/src/: main.rs
test-tracing/: Cargo.toml  README.md
test-tracing/test-tracing/: Cargo.toml  build.rs
test-tracing/test-tracing-common/: Cargo.toml
test-tracing/test-tracing-ebpf/: Cargo.toml
test-tracing/test-tracing-ebpf/.cargo/: config.toml
test-tracing/test-tracing-ebpf/src/: main.rs
test-tracing/test-tracing/src/: main.rs
(+1 files in other folders)
