[package]
name = "probe-tracer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
probe-tracer-common = { path = "../probe-tracer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "probe-tracer"
path = "src/main.rs"
