[package]
name = "packet-tracer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
packet-tracer-common = { path = "../packet-tracer-common" }
network-types = "0.0.7"
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "packet-tracer"
path = "src/main.rs"
