[package]
name = "ingress-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
network-types = "0.0.7"
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ingress"
path = "src/main.rs"
