[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
network-types = "0.0.7"
aya-ebpf = { workspace = true }
define_bounds_macro = { path = "../define_bounds_macro" }

[lib]
path = "src/lib.rs"
